@@ -87,6 +87,8 @@ int
 test_connect_disconnect (::Components::Receptacles_ptr rec,
                          ::CORBA::Object_ptr facet)
 {
+  ACE_DEBUG ((LM_DEBUG, "Run test_connect_disconnect test\n"));
+
   ::Components::Cookie_var ck = connect (rec, facet);
   ::CORBA::Object_var obj = disconnect (rec, ck.in ());
   if (!::CORBA::is_nil (obj.in ()))
@@ -106,6 +108,8 @@ int
 test_invalid_name_exception (::Components::Receptacles_ptr rec,
                              ::CORBA::Object_ptr facet)
 {
+  ACE_DEBUG ((LM_DEBUG, "Run test_invalid_name_exception test\n"));
+
   ::Components::Cookie_var ck;
   try
     {
@@ -153,6 +157,8 @@ int
 test_already_connected_exception (::Components::Receptacles_ptr rec,
                                   ::CORBA::Object_ptr facet)
 {
+  ACE_DEBUG ((LM_DEBUG, "Run test_already_connected_exception test\n"));
+
   ::Components::Cookie_var ck;
   try
     {
@@ -173,6 +179,169 @@ test_already_connected_exception (::Components::Receptacles_ptr rec,
   return 0;
 }
 
+//============================================================
+// test_get_connections
+//============================================================
+#if !defined (CCM_LW)
+int
+test_get_connections (::Components::Receptacles_ptr rec)
+{
+  ACE_DEBUG ((LM_DEBUG, "Run test_get_connections test\n"));
+  ::Components::ConnectionDescriptions_var descriptions;
+  try
+    {
+      descriptions = rec->get_connections ("use_cif_foo");
+    }
+  catch (const ::Components::InvalidName &)
+    {
+      ACE_ERROR ((LM_ERROR, "Receptacle test_get_connections - "
+                             "Error: Received InvalidName "
+                             "exception during invocation of "
+                             "get_connections.\n"));
+      return 1;
+    }
+  catch (const ::CORBA::NO_IMPLEMENT &)
+    {
+      // get_connections is not implemented
+      ACE_DEBUG ((LM_DEBUG, "Receptacle test_get_connections - "
+                            "get_connections method not implemented yet.\n"));
+    }
+  catch (...)
+    {
+      ACE_ERROR ((LM_ERROR, "Receptacle test_get_connections - "
+                            "Error: exception during invocation of "
+                            "get_connections.\n"));
+      return 1;
+    }
+
+  // test invalid name exception during invocation of get_connections
+  try
+    {
+      descriptions = rec->get_connections ("use_cif_foo_invalid_name");
+    }
+  catch (const ::CORBA::NO_IMPLEMENT &)
+    {
+      // get_connections is not implemented
+      ACE_DEBUG ((LM_DEBUG, "Receptacle test_get_connections - "
+                            "get_connections method not implemented yet.\n"));
+    }
+  catch (const ::Components::InvalidName &)
+    {
+      ACE_DEBUG ((LM_DEBUG, "Receptacle test_get_connections - "
+                            "Received expected InvalidName "
+                            "exception during connect\n"));
+    }
+  catch (...)
+    {
+      ACE_ERROR ((LM_ERROR, "Receptacle test_get_connections - "
+                            "Error: exception during invocation of "
+                            "get_connections.\n"));
+      return 1;
+    }
+  return 0;
+}
+#endif
+
+//============================================================
+// test_get_all_receptacles
+//============================================================
+#if !defined (CCM_LW)
+int
+test_get_all_receptacles (::Components::Receptacles_ptr rec)
+{
+  ACE_DEBUG ((LM_DEBUG, "Run test_get_all_receptacles test\n"));
+
+  ::Components::ReceptacleDescriptions_var descriptions;
+  try
+    {
+      descriptions = rec->get_all_receptacles ();
+    }
+  catch (const ::CORBA::Exception &ex)
+    {
+      ex._tao_print_exception ("test_get_all_receptacles");
+      return 1;
+    }
+  catch (...)
+    {
+      ACE_ERROR ((LM_ERROR, "Receptacle test_get_all_receptacles - "
+                            "Error: exception during invocation of "
+                            "get_all_receptacles.\n"));
+      return 1;
+    }
+  return 0;
+}
+#endif
+
+#if !defined (CCM_LW)
+int
+test_get_named_receptacles (::Components::Receptacles_ptr rec)
+{
+  ACE_DEBUG ((LM_DEBUG, "Run test_get_named_receptacles test\n"));
+  ::Components::ReceptacleDescriptions_var descriptions;
+
+  ::Components::NameList names;
+  names.length (1);
+  names[0] = ::CORBA::string_dup ("use_cif_foo");
+
+  try
+    {
+      descriptions = rec->get_named_receptacles (names);
+    }
+  catch (const ::Components::InvalidName &)
+    {
+      ACE_ERROR ((LM_ERROR, "Receptacle test_get_named_receptacles - "
+                             "Error: Received InvalidName "
+                             "exception during invocation of "
+                             "get_connections.\n"));
+      return 1;
+    }
+  catch (const ::CORBA::NO_IMPLEMENT &)
+    {
+      // get_named_receptacles is not implemented
+      ACE_DEBUG ((LM_DEBUG, "Receptacle test_get_named_receptacles - "
+                            "test_get_named_receptacles method not implemented yet.\n"));
+    }
+  catch (...)
+    {
+      ACE_ERROR ((LM_ERROR, "Receptacle test_get_named_receptacles - "
+                            "Error: exception during invocation of "
+                            "get_connections.\n"));
+      return 1;
+    }
+
+  // test invalid name exception during invocation of get_connections
+  ::Components::NameList invalid_names;
+  invalid_names.length (2);
+  invalid_names[0] = ::CORBA::string_dup ("use_cif_foo");
+  invalid_names[1] = ::CORBA::string_dup ("use_cif_foo_invalid_name");
+  try
+    {
+      descriptions = rec->get_named_receptacles (invalid_names);
+    }
+  catch (const ::Components::InvalidName &)
+    {
+      ACE_DEBUG ((LM_DEBUG, "Receptacle test_get_named_receptacles - "
+                            "Received expected InvalidName "
+                            "exception during connect\n"));
+    }
+  catch (const ::CORBA::NO_IMPLEMENT &)
+    {
+      // get_named_receptacles is not implemented
+      ACE_DEBUG ((LM_DEBUG, "Receptacle test_get_named_receptacles - "
+                            "test_get_named_receptacles method not implemented yet.\n"));
+    }
+  catch (...)
+    {
+      ACE_ERROR ((LM_ERROR, "Receptacle test_get_named_receptacles - "
+                            "Error: exception during invocation of "
+                            "get_connections.\n"));
+      return 1;
+    }
+  return 0;
+}
+#endif
+
+
 int
 run_test (::Components::Receptacles_ptr rec,
           ::CORBA::Object_ptr facet)
@@ -180,19 +349,34 @@ run_test (::Components::Receptacles_ptr rec,
   int ret = 0;
   try
     {
+      ACE_DEBUG ((LM_DEBUG, "\n\n===============================\n"));
       ret += test_connect_disconnect (rec, facet);
+
+      ACE_DEBUG ((LM_DEBUG, "\n\n===============================\n"));
       ret += test_invalid_name_exception (rec, facet);
+
+      ACE_DEBUG ((LM_DEBUG, "\n\n===============================\n"));
       ret += test_already_connected_exception (rec, facet);
 
 //       TODO:
+//       ACE_DEBUG ((LM_DEBUG, "\n\n===============================\n"));
 //       ret += test_invalid_connection_exception ();
+
+//       ACE_DEBUG ((LM_DEBUG, "\n\n===============================\n"));
 //       ret += test_exceeded_limit_exception ();
 
+//       resolve errors in core for:
+//          - test_get_all_receptacles
+
 #if !defined (CCM_LW)
-//       get_connections is not implement->don't test.
-//       ReceptacleDescriptions get_all_receptacles ();
-//       ReceptacleDescriptions get_named_receptacles (in NameList names)
-//         raises (InvalidName);
+      ACE_DEBUG ((LM_DEBUG, "\n\n===============================\n"));
+      ret += test_get_connections (rec);
+
+//       ACE_DEBUG ((LM_DEBUG, "\n\n===============================\n"));
+//       ret += test_get_all_receptacles (rec);
+
+      ACE_DEBUG ((LM_DEBUG, "\n\n===============================\n"));
+      ret += test_get_named_receptacles (rec);
 #endif
     }
   catch (...)
@@ -259,16 +443,19 @@ ACE_TMAIN (int argc,  ACE_TCHAR **argv)
                         "Error: Caught unknown exception\n"),
                         1);
     }
+
+  ACE_DEBUG ((LM_DEBUG, "\n\n===============================\n"));
+  ACE_DEBUG ((LM_DEBUG, "SUMMARY : \n"));
   if (ret != 0)
     {
-      ACE_ERROR ((LM_ERROR, "ACE_TMAIN : "
-              " %d error found during tests.\n",
+      ACE_ERROR ((LM_ERROR, "\tACE_TMAIN : "
+              " %d error(s) found during tests.\n",
               ret));
     }
   else
     {
-      ACE_ERROR ((LM_ERROR, "ACE_TMAIN : "
-              " No error found during tests.\n"));
+      ACE_ERROR ((LM_ERROR, "\tACE_TMAIN : "
+              " No problems found during tests.\n"));
     }
   return ret;
 }
